--- a/src/css/App.css
+++ b/src/css/App.css
@@ -98,6 +98,20 @@
 /*=======================================
                 CSSTRANSITIONS
 ========================================*/
+.square.false{
+  background: darkblue;
+  transform: translateX(-100%);
+}
+.square.true{
+  transform:translateX(0%);
+
+}
+.square-enter.square-enter-active {
+  background: rgb(241, 92, 5);
+}
+.square-exit.square-exit-active {
+  background: rgb(241, 12, 192);
+}
 
 /*=======================================
                 TRANSITIONS GROUP 
